--- a/power_law_convergence.ipynb
+++ b/power_law_convergence.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +61,7 @@
     "pareto_mean = []\n",
     "previous_mean = 0\n",
     "for i in range(len(pareto_list)):\n",
-    "    current_mean = (previous_mean*i + pareto_list[i])/float(i+1)\n",
+    "    current_mean = np.mean(pareto_list[:i+1])\n",
     "    pareto_mean.append(current_mean)\n",
     "    previous_mean = current_mean"
    ]
@@ -128,7 +126,7 @@
     "gaussian_mean = []\n",
     "previous_mean = 0\n",
     "for i in range(len(gaussian_list)):\n",
-    "    current_mean = (previous_mean*i + gaussian_list[i])/float(i+1)\n",
+    "    current_mean = np.mean(gaussian_list[:i+1])\n",
     "    gaussian_mean.append(current_mean)\n",
     "    previous_mean = current_mean"
    ]
